c4prj1_deck/grade.txt
Grading at Thu Jan 17 08:12:37 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:137:3: error: expected ‘;’ before ‘return’
   return remaining;
   ^
deck.c:122:12: error: variable ‘remaining’ set but not used [-Werror=unused-but-set-variable]
   deck_t * remaining;
            ^
deck.c:138:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
